Update template.html 22-06-2023

--- a/template.html
+++ b/template.html
@@ -6,10 +6,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="hendrik.friederichs">
-<meta name="dcterms.date" content="2023-06-21">
+<meta name="author" content="Hendrik Friederichs">
+<meta name="dcterms.date" content="2023-06-22">
 
-<title>Untitled</title>
+<title>Template for Research in Medical Education</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -47,8 +47,14 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#introduction" id="toc-introduction" class="nav-link active" data-scroll-target="#introduction">Introduction</a></li>
+  <li><a href="#abstract" id="toc-abstract" class="nav-link active" data-scroll-target="#abstract">Abstract</a>
+  <ul class="collapse">
+  <li><a href="#background" id="toc-background" class="nav-link" data-scroll-target="#background">Background</a></li>
+  </ul></li>
+  <li><a href="#background-1" id="toc-background-1" class="nav-link" data-scroll-target="#background-1">Background</a>
+  <ul class="collapse">
   <li><a href="#more-information" id="toc-more-information" class="nav-link" data-scroll-target="#more-information">More Information</a></li>
+  </ul></li>
   </ul>
 </nav>
 </div>
@@ -56,7 +62,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Untitled</h1>
+<h1 class="title">Template for Research in Medical Education</h1>
 </div>
 
 
@@ -66,14 +72,14 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>hendrik.friederichs </p>
+             <p>Hendrik Friederichs </p>
           </div>
   </div>
     
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">June 21, 2023</p>
+      <p class="date">June 22, 2023</p>
     </div>
   </div>
   
@@ -83,13 +89,18 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="introduction" class="level2">
-<h2 class="anchored" data-anchor-id="introduction">Introduction</h2>
-<p><em>TODO</em> Create an example file that demonstrates the formatting and features of your format.</p>
+<section id="abstract" class="level1">
+<h1>Abstract</h1>
+<section id="background" class="level2">
+<h2 class="anchored" data-anchor-id="background">Background</h2>
 </section>
+</section>
+<section id="background-1" class="level1">
+<h1>Background</h1>
 <section id="more-information" class="level2">
 <h2 class="anchored" data-anchor-id="more-information">More Information</h2>
 <p>You can learn more about controlling the appearance of HTML output here: <a href="https://quarto.org/docs/output-formats/html-basics.html" class="uri">https://quarto.org/docs/output-formats/html-basics.html</a></p>
+</section>
 </section>
 
 </main>
